<resources>
    <string name="app_name">AppPedidos</string>
    <string name="navigation_drawer_open">Menú</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Clientes</string>
    <string name="menu_gallery">Mi Día</string>
    <string name="menu_slideshow">Cerrar Sesión</string>
    <!-- Login -->
    <string name="username_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button_text">Iniciar Sesión</string>
    <item name="nav_login" type="id" />
    <item name="nav_home" type="id" />
    <string name="menu_login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="midiatoolbartitle">Mi Dia</string>


</resources>