<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingRight="8dp"
            app:srcCompat="@drawable/larocalogo" />

        <TextView
            android:id="@+id/MenuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comercial La Roca"
            android:textColor="#000000"
            android:textSize="20sp"
             />
    </LinearLayout>

    <TextView
        android:id="@+id/MenuName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textColor="#000000"
        android:textSize="14sp" />

</LinearLayout>
